<resources>
    <string name="app_name">Film Collector</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_actor">Add Actor</string>
    <string name="title_activity_movie">Actors</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="title_activity_add_movie">Add Movie</string>
    <string name="actor_name">Actor Name</string>
    <string name="movie_title">Title</string>
    <string name="movie_rating">Rating</string>
    <string name="movie_length">Length</string>
    <string name="get_movies">Get Movies</string>
    <string name="title_activity_movie_search">Get Movies</string>
    <string name="title_activity_movie_search_results">Movies</string>
</resources>
