<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.susie.filmcollector.AddMovie"
    android:id="@+id/add_movie_view">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/actor_name"
        android:id="@+id/tvActorName"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/TextView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etActorName"
        android:width="200dp"
        android:layout_alignBottom="@+id/tvActorName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:editable="false"
        android:enabled="false"
        style="@style/EditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/movie_title"
        android:id="@+id/tvMovieTitle"
        android:layout_below="@+id/tvActorName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/TextView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etMovieTitle"
        android:layout_alignBottom="@+id/tvMovieTitle"
        android:layout_alignLeft="@+id/etActorName"
        android:layout_alignStart="@+id/etActorName"
        android:width="200dp"
        style="@style/EditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/movie_rating"
        android:id="@+id/tvMovieRating"
        android:layout_below="@+id/tvMovieTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/TextView" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spMovingRating"
        android:layout_alignBottom="@+id/tvMovieRating"
        android:layout_alignLeft="@+id/etMovieTitle"
        android:layout_alignStart="@+id/etMovieTitle"
        android:layout_alignParentRight="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/movie_length"
        android:id="@+id/tvMovieLength"
        style="@style/TextView"
        android:layout_below="@+id/tvMovieRating"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etMovieLength"
        android:width="200dp"
        style="@style/EditText"
        android:layout_alignBottom="@+id/tvMovieLength"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add"
        android:id="@+id/btnAddMovie"
        android:layout_below="@+id/etMovieLength"
        android:layout_centerHorizontal="true"
        android:onClick="addMovie"
        style="@style/Button" />
</RelativeLayout>
